--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+<!--Задача 4-->
+<p>ax2 + bx + c = 0</p>
+<input id="a" value="">
+<input id="b" value="">
+<input id="c" value="">
+<p id="par"></p>
+<input id="but" type="button" value="рассчитать кв.корень">
+
 <script src="script.js"></script>
 </body>
 </html>
