--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 <p id="par"></p>
 <input id="but" type="button" value="рассчитать кв.корень">
 
+<!--Задача 5-->
+<input id="inpt" value="">
+<p id="par"></p>
+
+<!--Задача 6-->
+<p id="par">Lorem ipsum dolor sit amet.</p>
+
 <script src="script.js"></script>
 </body>
 </html>
