--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 <!--Задача 6-->
 <p id="par">Lorem ipsum dolor sit amet.</p>
 
+<!--Задача 8-->
+<p>ax2 + bx + c = 0</p>
+<input id="a" value="">
+<input id="b" value="">
+<input id="c" value="">
+<p id="par"></p>
+<input id="but" type="button" value="рассчитать кв.корень">
+
 <script src="script.js"></script>
 </body>
 </html>
