--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
 <p id="par">Lorem ipsum dolor sit amet.</p>
 
 <!--Задача 8-->
-<p>ax2 + bx + c = 0</p>
-<input id="a" value="">
-<input id="b" value="">
-<input id="c" value="">
-<p id="par"></p>
-<input id="but" type="button" value="рассчитать кв.корень">
+<p id="par">0</p>
+<button id="start">start</button>
+<button id="stop">stop</button>
+
 
 <script src="script.js"></script>
 </body>
