--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -28,6 +29,8 @@
 <button id="start">start</button>
 <button id="stop">stop</button>
 
+<!--Задача 9,10,11,12,13-->
+<div id="list"></div>
 
 <script src="script.js"></script>
 </body>
