--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 <!--Задача 9,10,11,12,13-->
 <div id="list"></div>
 
+<!--Задача 14,15,16,17-->
+<div id="parent"></div>
+
+
+<!--Задача 18,19,20,21-->
+<div id="parent"></div>
+<div id="parent2"></div>
+
 <script src="script.js"></script>
 </body>
 </html>
