--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 <div id="parent"></div>
 <div id="parent2"></div>
 
+<!--Задача 22-->
+<div id="elem"></div>
+
 <script src="script.js"></script>
 </body>
 </html>
