--- a/index.html
+++ b/index.html
@@ -43,6 +43,52 @@
 <!--Задача 22-->
 <div id="elem"></div>
 
+<!--Задача 23-->
+<table id="table">
+    <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>5</td>
+        <td>6</td>
+    </tr>
+    <tr>
+        <td>7</td>
+        <td>8</td>
+        <td>9</td>
+    </tr>
+</table>
+<br>
+<input type="submit" id="button">
+
+<!--Задача 24-->
+<div id="parent">
+    <h2>Анализатор текста</h2>
+<textarea  id="textarea" cols="30" rows="10" placeholder="Введите текст"></textarea><br>
+
+    <span class = 'checkbox-group'><input type = 'checkbox' id = 'checkbox1'><label for = 'checkbox1'>Вывести количество слов</label></span><br>
+
+    <span class = 'checkbox-group'><input type = 'checkbox' id = 'checkbox2'><label for = 'checkbox2'>Вывести количество символов с пробелами</label></span> <br>
+
+    <span class = 'checkbox-group'><input type = 'checkbox' id = 'checkbox3'><label for = 'checkbox3'>Вывести количество символов без пробелов</label></span> <br>
+
+    <span class = 'checkbox-group'><input type = 'checkbox' id = 'checkbox4'><label for = 'checkbox4'>Вывести процентое содержание символов</label></span><br>
+
+    <p id="par"></p>
+</div>
+
+<!--Задача 25-->
+<h2>Игра угадай число</h2>
+<input id="input">
+<p id="par"></p>
+
+<!--Задача 26-->
+<h2>Игра угадай ячейку</h2>
+<div id="elem"></div>
+
 <script src="script.js"></script>
 </body>
 </html>
