--- a/index.html
+++ b/index.html
@@ -89,6 +89,89 @@
 <h2>Игра угадай ячейку</h2>
 <div id="elem"></div>
 
+<!--Задача 27-->
+<input id="result" autofocus>
+<div class="keyboard">
+
+    <div class="row">
+        <div class="key"><span>ё</span></div>
+        <div class="key"><span>1</span></div>
+        <div class="key"><span>2</span></div>
+        <div class="key"><span>3</span></div>
+        <div class="key"><span>4</span></div>
+        <div class="key"><span>5</span></div>
+        <div class="key"><span>6</span></div>
+        <div class="key"><span>7</span></div>
+        <div class="key"><span>8</span></div>
+        <div class="key"><span>9</span></div>
+        <div class="key"><span>0</span></div>
+        <div class="key"><span>-</span></div>
+        <div class="key"><span>=</span></div>
+        <div class="key backspace"><span>Backspace</span></div>
+    </div>
+
+    <div class="row">
+        <div class="key"><span>й</span></div>
+        <div class="key"><span>ц</span></div>
+        <div class="key"><span>у</span></div>
+        <div class="key"><span>к</span></div>
+        <div class="key"><span>е</span></div>
+        <div class="key"><span>н</span></div>
+        <div class="key"><span>г</span></div>
+        <div class="key"><span>ш</span></div>
+        <div class="key"><span>щ</span></div>
+        <div class="key"><span>з</span></div>
+        <div class="key"><span>х</span></div>
+        <div class="key"><span>ъ</span></div>
+        <div class="key"><span>\</span></div>
+        <div class="key tab"><span>Tab</span></div>
+    </div>
+
+    <div class="row">
+        <div class="key"><span>ф</span></div>
+        <div class="key"><span>ы</span></div>
+        <div class="key"><span>в</span></div>
+        <div class="key"><span>а</span></div>
+        <div class="key"><span>п</span></div>
+        <div class="key"><span>р</span></div>
+        <div class="key"><span>о</span></div>
+        <div class="key"><span>л</span></div>
+        <div class="key"><span>д</span></div>
+        <div class="key"><span>ж</span></div>
+        <div class="key"><span>э</span></div>
+        <div class="key capslock"><span>Caps Lock</span></div>
+    </div>
+
+    <div class="row">
+        <div class="key"><span>я</span></div>
+        <div class="key"><span>ч</span></div>
+        <div class="key"><span>с</span></div>
+        <div class="key"><span>м</span></div>
+        <div class="key"><span>и</span></div>
+        <div class="key"><span>т</span></div>
+        <div class="key"><span>ь</span></div>
+        <div class="key"><span>б</span></div>
+        <div class="key"><span>ю</span></div>
+        <div class="key"><span>.</span></div>
+        <div class="key"><span>,</span></div>
+    </div>
+
+    <div class="row">
+        <div class="key space"></div>
+    </div>
+
+</div>
+
+<!--Задача 28-->
+<div id="calc-wrap">
+    <div id="calc">
+        <input type="checkbox" id="checkbox"><label for = 'checkbox'>Запомнить результат</label>
+        <button>Вывести результат из памяти</button>
+        <textarea id="inputVal">0</textarea>
+    </div>
+</div>
+
+
 <script src="script.js"></script>
 </body>
 </html>
